# esp32_web_services

./: .gitignore  CMakeLists.txt  README.md  esp32_web_services.drawio  partitions.csv  partitions_singleapp.csv  sdkconfig  sdkconfig.old
components/file_manager/: CMakeLists.txt
components/file_manager/inc/: file_manager_spiffs.h  file_manager_spiffs_tests.h
components/file_manager/src/: file_manager_spiffs.c  file_manager_spiffs_tests.c
components/leds/: CMakeLists.txt  leds.c  leds.h
components/spiffs_helper/: CMakeLists.txt  spiffs_helper.c  spiffs_helper.h  tests_spiffs_helper.c
components/webserver/: CMakeLists.txt  webserver.c  webserver.h  webserver_test.c  webserver_test.h
components/wifi/: CMakeLists.txt  connect.c  connect.h  connect_err.c  test_connect.h
main/: CMakeLists.txt  main.c
spiffs_directory/: index.html
web_pages/esp_vue/: README.md  package-lock.json  package.json  vite.config.js
web_pages/esp_vue/src/: App.vue  main.js
web_pages/esp_vue/src/router/: index.js
web_pages/esp_vue/src/views/: HomeView.vue  LedView.vue  WiFi.vue
